--- a/package.json
+++ b/package.json
@@ -2,24 +2,17 @@
   "name": "email",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node index.ts"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bin": {
-    "email-cli": "./index.ts"
+    "email-cli": "./src/index.js"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.4.2",
-    "prompt-sync": "^4.2.0",
-    "tsc": "^1.20150623.0",
-    "typescript": "^4.2.3"
-  },
-  "devDependencies": {
-    "@tsconfig/node14": "^1.0.0",
-    "@types/prompt-sync": "^4.1.0"
+    "@sendgrid/mail": "^7.4.2"
   }
 }
